--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.6.0",
+		"bootstrap": "^5.3.3",
+		"bootstrap-icons": "^1.11.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
